frontend/frontend-ingress.yaml
  apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client-max-body-size: 500m
    ingress.kubernetes.io/client-max-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: frontend
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
